# warikan

./: .gitignore  LICENSE  README.md  Taskfile.yml  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: backend.yml  frontend.yml
backend/: .env.sample  Cargo.toml
backend/src/: app.rs  auth.rs  graphql.rs  lib.rs  main.rs  mongo.rs  user.rs
backend/src/controllers/: group.rs  mod.rs  payment.rs  user.rs
backend/src/entities/: auth.rs  group.rs  mod.rs  payment.rs  user.rs
backend/src/repositories/: mod.rs  traits.rs
backend/src/repositories/mongo/: group.rs  mod.rs  payment.rs  user.rs
backend/src/usecases/: group.rs  mod.rs  payment.rs  user.rs
frontend/: .env.sample  .eslintrc.cjs  codegen.ts  package.json  tailwind.config.ts
frontend/app/components/: container.tsx  copyright.tsx  group.tsx  layout.tsx  navbar.tsx  payment.tsx  typography.tsx
frontend/app/components/ui/: avatar.tsx  button.tsx  calendar.tsx  card.tsx  form.tsx  popover.tsx
frontend/app/gql/: gql.ts  graphql.ts
frontend/app/lib/: data.ts
frontend/app/routes/: _index.tsx  app.groups.$groupId._index.tsx  app.groups.$groupId.payments.$paymentId._index.tsx  app.groups.$groupId.tsx  app.groups._index.tsx  app.notifications.tsx  app.payments.$paymentId._index.tsx  app.settings.tsx  app.tsx  auth.auth0.tsx  auth.callback.tsx  auth.login.tsx  auth.logout.tsx  login.tsx
frontend/app/services/: auth.server.ts  constants.server.ts
