[package]
name = "backend"
version = "0.1.0"
authors = ["2shiori17 <2shiori17@proton.me>"]
edition = "2021"
repository = "https://github.com/2shiori17/warikan.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0"
async-graphql-axum = "6.0"
axum = "0.7"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
