[package]
name = "backend"
version = "0.1.0"
authors = ["2shiori17 <2shiori17@proton.me>"]
edition = "2021"
repository = "https://github.com/2shiori17/warikan.git"
license = "MIT"

[dependencies]
async-graphql = { git = "https://github.com/async-graphql/async-graphql.git", features = ["chrono"] }
async-graphql-axum = { git = "https://github.com/async-graphql/async-graphql.git" }
async-trait = "0.1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"
futures = "0.3"
jsonwebtoken = "9.0"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.8", features = ["full"] }
url = "2.5"
